--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,88 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  color: #3f3f3f;
+  font-family: Arial, Helvetica, sans-serif;
+  letter-spacing: 2px;
+  font-size: 12px;
 }
 
-.App-link {
-  color: #61dafb;
+.header {
+  font-size: 40px;
+  margin: 3%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.searchBar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 70vw;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.input-row {
+  justify-content: flex-start;
+}
+
+#name {
+  height: 35px;
+  width: 25vw;
+  border-color: #c8c8c8;
+  border-radius: 4px;
+  border-width: thin;
+  border-style: solid;
+  padding: 4%;
+}
+
+.button-row {
+  justify-content: space-around;
+  margin-top: 10px;
+}
+
+.search-input {
+  display: flex;
+  flex-direction: column;
+  margin-right: 20px;
+}
+
+.button {
+  cursor: pointer;
+  border: solid 1px #c8c8c8;
+  border-radius: 50px;
+  padding: .5% 1% .5% 1%;
+}
+
+#clear-button:hover {
+  border-color: #ef476f;
+}
+
+#search-button:hover {
+  border-color: #06d6a0;
+}
+
+.del-button {
+  cursor: pointer;
+}
+
+.optionContainer li:hover,
+.optionContainer .highlight {
+  background: #f8ffe5;
+}
+
+.resultTable {
+  width: 70vw;
+  margin-top: 10px;
+  /*border: solid 1px #c8c8c8;
+  border-radius: 4px;*/
+}
+
+.table-header {
+  /*font-weight: bold;*/
+  padding: 5px;
 }
